- fixed Google Drive upload - fixed import from XML files - code formatting of all classes
git-svn-id: https://faracvs.cs.uni-magdeburg.de/svn/sterner-VerbrauchsApp/trunk@11 e74131eb-593b-4f00-8808-e0f5b2e53e2d

--- a/res/menu/main_menubar.xml
+++ b/res/menu/main_menubar.xml
@@ -5,6 +5,11 @@
 			android:title="@string/action_add_car" 
 			android:showAsAction="ifRoom" />
 		
+		<item android:id="@+id/action_import_car"
+			android:icon="@drawable/ic_action_import_export"
+			android:title="@string/action_import_car" 
+			android:showAsAction="ifRoom" />
+		
 		<item android:id="@+id/action_quit"
 			android:icon="@drawable/ic_action_remove"
 			android:title="@string/action_quit" />
