--- a/res/menu/car_menubar.xml
+++ b/res/menu/car_menubar.xml
@@ -10,13 +10,11 @@
 		
 		<item android:id="@+id/action_add_consumption"
 			android:icon="@drawable/ic_action_new"
-			android:title="@string/action_add_consumption" 
-			android:showAsAction="ifRoom" />
+			android:title="@string/action_add_consumption" />
 		
 		<item android:id="@+id/action_view_consumptions"
 			android:icon="@drawable/ic_action_search"
-			android:title="@string/action_view_consumptions" 
-			android:showAsAction="ifRoom" />
+			android:title="@string/action_view_consumptions" />
 		
 		<item android:id="@+id/action_view_chart"
 			android:icon="@drawable/chart_area"
