--- a/res/menu/main_menubar.xml
+++ b/res/menu/main_menubar.xml
@@ -7,8 +7,7 @@
 		
 		<item android:id="@+id/action_import_car"
 			android:icon="@drawable/ic_action_import_export"
-			android:title="@string/action_import_car" 
-			android:showAsAction="ifRoom" />
+			android:title="@string/action_import_car" />
 		
 		<item android:id="@+id/action_quit"
 			android:icon="@drawable/ic_action_remove"
