Added three brands with icons
git-svn-id: https://faracvs.cs.uni-magdeburg.de/svn/sterner-VerbrauchsApp/trunk@14 e74131eb-593b-4f00-8808-e0f5b2e53e2d

--- a/res/values/brands.xml
+++ b/res/values/brands.xml
@@ -5,8 +5,11 @@
         <item>BMW</item>
         <item>Daimler-Benz</item>
         <item>Ford</item>
+        <item>Mazda</item>
+        <item>Nissan</item>
         <item>Porsche</item>
         <item>Skoda</item>
+		<item>Toyota</item>
         <item>Volkswagen</item>
     </string-array>
 </resources>
