--- a/res/layout/activity_car_content.xml
+++ b/res/layout/activity_car_content.xml
@@ -10,7 +10,8 @@
         android:layout_height="wrap_content"
         android:textColor="#33b5e5"
         android:textSize="25sp"
-        android:layout_marginLeft="6dp"
+        android:layout_marginStart="6dp"
+	    android:layout_marginLeft="6dp"
         android:textStyle="bold" />
 
     <LinearLayout
@@ -28,6 +29,7 @@
 	        android:text="@string/startkm_text"
 	        android:singleLine="true"
 	        android:layout_marginTop="6dp"
+	        android:layout_marginStart="6dp"
 	        android:layout_marginLeft="6dp" />
          
          <TextView  
@@ -38,6 +40,7 @@
 	        android:textSize="22sp"
 	        android:singleLine="true"
 	        android:layout_marginTop="6dp"
+	        android:layout_marginStart="6dp"
 	        android:layout_marginLeft="6dp" />
      </LinearLayout>
      
@@ -56,6 +59,7 @@
 	        android:text="@string/actualkm_text"
 	        android:singleLine="true"
 	        android:layout_marginTop="6dp"
+	        android:layout_marginStart="6dp"
 	        android:layout_marginLeft="6dp" />
          
          <TextView  
@@ -66,6 +70,7 @@
 	        android:textSize="22sp"
 	        android:singleLine="true"
 	        android:layout_marginTop="6dp"
+	        android:layout_marginStart="6dp"
 	        android:layout_marginLeft="6dp" />
      </LinearLayout>
      
@@ -84,6 +89,7 @@
 	        android:text="@string/consumption_text"
 	        android:singleLine="true"
 	        android:layout_marginTop="6dp"
+	        android:layout_marginStart="6dp"
 	        android:layout_marginLeft="6dp" />
          
          <TextView  
@@ -94,6 +100,7 @@
 	        android:textSize="22sp"
 	        android:singleLine="true"
 	        android:layout_marginTop="6dp"
+	        android:layout_marginStart="6dp"
 	        android:layout_marginLeft="6dp" />
      </LinearLayout>
      
@@ -112,6 +119,7 @@
 	        android:text="@string/drivenKm_text"
 	        android:singleLine="true"
 	        android:layout_marginTop="6dp"
+	        android:layout_marginStart="6dp"
 	        android:layout_marginLeft="6dp" />
          
          <TextView  
@@ -122,6 +130,7 @@
 	        android:textSize="22sp"
 	        android:singleLine="true"
 	        android:layout_marginTop="6dp"
+	        android:layout_marginStart="6dp"
 	        android:layout_marginLeft="6dp" />
      </LinearLayout>
      
@@ -140,6 +149,7 @@
 	        android:text="@string/overallCosts_text"
 	        android:singleLine="true"
 	        android:layout_marginTop="6dp"
+	        android:layout_marginStart="6dp"
 	        android:layout_marginLeft="6dp" />
          
          <TextView  
@@ -150,6 +160,7 @@
 	        android:textSize="22sp"
 	        android:singleLine="true"
 	        android:layout_marginTop="6dp"
+	        android:layout_marginStart="6dp"
 	        android:layout_marginLeft="6dp" />
      </LinearLayout>
     
