--- a/res/layout/layout_consumption_view.xml
+++ b/res/layout/layout_consumption_view.xml
@@ -26,7 +26,7 @@
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
 	        android:layout_weight="1"
-	        android:gravity="left"
+	        android:gravity="start"
 	        android:textSize="21sp"
 	        android:layout_marginRight="6dp"
 	        android:layout_marginLeft="6dp" />
@@ -36,7 +36,7 @@
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
 	        android:layout_weight="1"
-	        android:gravity="left"
+	        android:gravity="start"
 	        android:textSize="21sp"
 	        android:layout_marginRight="6dp"
 	        android:layout_marginLeft="6dp" />
@@ -46,7 +46,7 @@
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
 	        android:layout_weight="1"
-	        android:gravity="left"
+	        android:gravity="start"
 	        android:textSize="21sp"
 	        android:layout_marginRight="6dp"
 	        android:layout_marginLeft="6dp" />
@@ -56,7 +56,7 @@
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
 	        android:layout_weight="1"
-	        android:gravity="left"
+	        android:gravity="start"
 	        android:textSize="21sp"
 	        android:layout_marginRight="6dp"
 	        android:layout_marginLeft="6dp" />
@@ -66,7 +66,7 @@
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
 	        android:layout_weight="1"
-	        android:gravity="left"
+	        android:gravity="start"
 	        android:textSize="21sp"
 	        android:layout_marginRight="6dp"
 	        android:layout_marginLeft="6dp" />
