Updated resources to use material design.
git-svn-id: https://faracvs.cs.uni-magdeburg.de/svn/sterner-VerbrauchsApp/branches/material@56 e74131eb-593b-4f00-8808-e0f5b2e53e2d

--- a/res/menu/car_menubar.xml
+++ b/res/menu/car_menubar.xml
@@ -1,4 +1,5 @@
-<menu xmlns:android="http://schemas.android.com/apk/res/android" >
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto" >
 		<!-- item android:id="@+id/action_search"
         	android:icon="@drawable/ic_action_search"
 			android:title="@string/action_search"/> -->
@@ -6,7 +7,7 @@
 		<item android:id="@+id/action_edit_entry"
 			android:icon="@drawable/ic_action_edit"
 			android:title="@string/action_edit_entry" 
-			android:showAsAction="ifRoom" />
+			app:showAsAction="ifRoom" />
 		
 		<item android:id="@+id/action_add_consumption"
 			android:icon="@drawable/ic_action_new"
