--- a/res/menu/main_menubar.xml
+++ b/res/menu/main_menubar.xml
@@ -1,9 +1,10 @@
-<menu xmlns:android="http://schemas.android.com/apk/res/android" >
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto" >
 		
 		<item android:id="@+id/action_add_car"
 			android:icon="@drawable/ic_action_new"
 			android:title="@string/action_add_car" 
-			android:showAsAction="ifRoom" />
+			app:showAsAction="ifRoom" />
 		
 		<item android:id="@+id/action_import_car"
 			android:icon="@drawable/ic_action_import_export"
